# SFMLAppObj

./: CMakeLists.txt  Figure.cpp  Figure.h  main.cpp
